--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<div class="container">
+<style>
+
+</style>
+
+<main class="main">
   <app-sidebar></app-sidebar>
   <div class="content">
-    <router-outlet />
+    <router-outlet></router-outlet>
   </div>
-</div>
+</main>
