--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+/* styles.css */
+/* @import "@angular/material/prebuilt-themes/indigo-pink.css"; */
+
+/* .content {
+    width: 100%;
+} */
+/* html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+
+/* html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+app-root {
+  display: flex;
+  height: 100%;
+  width: 100%;
+} */
