--- a/src/app/features/customer/customer-list/customer-list.component.html
+++ b/src/app/features/customer/customer-list/customer-list.component.html
@@ -1,1 +1,82 @@
-<p>halaman customer</p>
+<div class="customer-list">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Customer List</mat-card-title>
+      <mat-card-actions>
+        <button mat-raised-button color="primary" (click)="openCreateCustomerDialog()">Create Customer</button>
+      </mat-card-actions>
+    </mat-card-header>
+    <mat-card-content>
+      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 responsive-table tableCustomer">
+        <!-- ID Column -->
+        <ng-container matColumnDef="customerId">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+          <td mat-cell *matCellDef="let customer"> {{customer.customerId}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="customerName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+          <td mat-cell *matCellDef="let customer"> {{customer.customerName}} </td>
+        </ng-container>
+
+        <!-- Address Column -->
+        <ng-container matColumnDef="customerAddress">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+          <td mat-cell *matCellDef="let customer"> {{customer.customerAddress}} </td>
+        </ng-container>
+
+        <!-- Code Column -->
+        <ng-container matColumnDef="customerCode">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
+          <td mat-cell *matCellDef="let customer"> {{customer.customerCode}} </td>
+        </ng-container>
+
+        <!-- Phone Number Column -->
+        <ng-container matColumnDef="customerPhone">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone Number </th>
+          <td mat-cell *matCellDef="let customer"> {{customer.customerPhone}} </td>
+        </ng-container>
+
+        <!-- Is Active Column -->
+        <ng-container matColumnDef="isActive">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Active </th>
+          <td mat-cell *matCellDef="let customer"> {{customer.isActive}} </td>
+        </ng-container>
+
+        <!-- Last Order Date Column -->
+        <ng-container matColumnDef="lastOrderDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Order Date </th>
+          <td mat-cell *matCellDef="let customer"> {{customer.lastOrderDate | customDate}} </td>
+        </ng-container>
+
+        <!-- PIC Column -->
+        <ng-container matColumnDef="pic" >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> PIC </th>
+          <td mat-cell *matCellDef="let customer" class="fix-text"> {{customer.pic}} </td>
+        </ng-container>
+
+        <!-- Action Column -->
+        <ng-container matColumnDef="actions" class="actionColumn">
+          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <td mat-cell *matCellDef="let customer" class="action-buttons">
+            <button mat-icon-button (click)="viewCustomer(customer.customerId)" class="icon-visibility">
+              <mat-icon>visibility</mat-icon>
+            </button>
+            <button mat-icon-button (click)="editCustomer(customer.customerId)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button (click)="confirmDeleteCustomer(customer.customerId)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+    </mat-card-content>
+  </mat-card>
+</div>
