--- a/src/app/features/item/item-add/item-add.component.html
+++ b/src/app/features/item/item-add/item-add.component.html
@@ -1,1 +1,34 @@
-<p>item-add works!</p>
+<div class="content" [ngClass]="{'is-very-small-screen': isVerySmallScreen}">
+    <h6 mat-dialog-title>Add New Item</h6>
+    <div mat-dialog-content class="dialog-content">
+        <form [formGroup]="itemForm" (ngSubmit)="onSubmit()">
+            <mat-form-field appearance="fill">
+                <mat-label>Name</mat-label>
+                <input matInput formControlName="itemsName">
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+                <mat-label>Code</mat-label>
+                <input matInput formControlName="itemsCode">
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+                <mat-label>Stock</mat-label>
+                <input matInput formControlName="stock" type="number">
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+                <mat-label>Price</mat-label>
+                <input matInput formControlName="price" type="number">
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+                <mat-label>Last Restock Date</mat-label>
+                <input matInput [matDatepicker]="picker" formControlName="lastReStock" placeholder="YYYY-MM-DD">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+            <mat-checkbox formControlName="isAvailable">Is Available</mat-checkbox>
+        </form>
+    </div>
+    <div mat-dialog-actions class="dialog-actions">
+        <button mat-button (click)="onNoClick()">Cancel</button>
+        <button mat-raised-button color="primary" (click)="onSubmit()">Add</button>
+    </div>
+</div>
