--- a/src/app/features/item/item-list/item-list.component.css
+++ b/src/app/features/item/item-list/item-list.component.css
@@ -36,32 +36,35 @@ mat-card-title {
 
 .mat-elevation-z8 {
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14), 
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .mat-paginator {
   margin-top: 20px;
 }
 
-.icon-visibility {
-  display: none;
-}
-
 .fix-text {
-  white-space: normal!important;
-  word-break: break-all!important;
-}
-
-@media (max-width: 1100px) {
-  .icon-visibility {
-    display: block;
-  }
+  white-space: normal !important;
+  word-break: break-all !important;
 }
 
 @media (max-width: 800px) {
   td.cdk-column-actions button {
     margin: 8px;
+  }
+
+  .hide-text-on-small {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hide-text-on-small span {
+    display: none;
+  }
+
+  .hide-text-on-small mat-icon {
+    margin: 0;
   }
 }
 
@@ -95,17 +98,17 @@ mat-card-title {
 @media (max-width: 450px) {
   ::ng-deep .mat-mdc-paginator-range-actions {
     display: flex;
-    justify-content: flex-end; /* Mengatur item pagination agar di awal */
+    justify-content: flex-end; 
     align-items: center;
-    flex-wrap: wrap; /* Membuat elemen di dalamnya bisa membungkus */
+    flex-wrap: wrap; 
   }
 
   ::ng-deep .mat-mdc-paginator-range-label {
-    order: 1; /* Mengatur urutan elemen */
+    order: 1;
     margin: 0 !important;
     margin-right: 12px !important;
-    width: 100%; /* Mengisi lebar penuh */
-    text-align: right; /* Mengatur teks agar rata kanan */
+    width: 100%; 
+    text-align: right;
   }
 }
 
