--- a/src/app/features/customer/customer-list/customer-list.component.css
+++ b/src/app/features/customer/customer-list/customer-list.component.css
@@ -27,7 +27,8 @@ mat-card-title {
   overflow: hidden;
 }
 
-.mat-header-cell, .mat-cell {
+.mat-header-cell,
+.mat-cell {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,29 +36,27 @@ mat-card-title {
 
 .mat-elevation-z8 {
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14), 
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .mat-paginator {
   margin-top: 20px;
 }
 
-.icon-visibility {
+/* .icon-visibility {
   display: none;
-}
+} */
 
 .fix-text {
-  white-space: normal!important;
-  word-break: break-all!important;
+  white-space: normal !important;
+  word-break: break-all !important;
 }
 
 @media (max-width: 1100px) {
-  .icon-visibility {
+  /* .icon-visibility {
     display: block;
-  }
+  } */
 }
-
 
 @media (max-width: 800px) {
   td.cdk-column-actions button {
@@ -78,7 +77,7 @@ mat-card-title {
   }
 
   .mat-cell {
-    display: block; 
+    display: block;
   }
 
   .mat-cell:not(:last-child) {
@@ -90,22 +89,37 @@ mat-card-title {
     flex-direction: column;
     align-items: center;
   }
+
+  .hide-text-on-small {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hide-text-on-small span {
+    display: none; 
+  }
+
+  .hide-text-on-small mat-icon {
+    margin: 0; 
+  }
 }
 
 @media (max-width: 450px) {
   ::ng-deep .mat-mdc-paginator-range-actions {
     display: flex;
-    justify-content: flex-end; 
+    justify-content: flex-end;
     align-items: center;
-    flex-wrap: wrap; 
-  }
-  
-  ::ng-deep .mat-mdc-paginator-range-label {
-    order: 1; 
-    margin: 0! important; 
-    margin-right: 12px !important;
-    width: 100%; 
-    text-align: right; 
+    flex-wrap: wrap;
   }
 
+  ::ng-deep .mat-mdc-paginator-range-label {
+    order: 1;
+    margin: 0 !important;
+    margin-right: 12px !important;
+    width: 100%;
+    text-align: right;
+  }
 }
+
+
