--- a/src/app/features/order/order-delete/order-delete.component.html
+++ b/src/app/features/order/order-delete/order-delete.component.html
@@ -1,1 +1,10 @@
-<p>order-delete works!</p>
+<mat-dialog-content>
+    <div class="content">
+        <h6 mat-dialog-title>Confirm Delete</h6>
+        <p>Are you sure you want to delete this order?</p>
+        <div mat-dialog-actions class="dialog-actions">
+            <button mat-button (click)="onNoClick()">No</button>
+            <button mat-flat-button color="warn" (click)="dialogRef.close(true)">Yes</button>
+        </div>
+    </div>
+</mat-dialog-content>
