--- a/src/app/features/order/order-list/order-list.component.html
+++ b/src/app/features/order/order-list/order-list.component.html
@@ -1,1 +1,94 @@
-<p>halaman list order</p>
+<div class="order-list">
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Order List</mat-card-title>
+            <mat-card-actions>
+                <button mat-raised-button color="primary" (click)="openCreateOrderDialog()" class="hide-text-on-small">
+                    <mat-icon>post_add</mat-icon> <span>Create New Order</span>
+                </button>
+                <button mat-raised-button color="accent" (click)="downloadAllReports()" style="margin-left: 10px;"
+                    class="hide-text-on-small">
+                    <mat-icon>cloud_download</mat-icon> <span>Download All Reports</span>
+                </button>
+            </mat-card-actions>
+        </mat-card-header>
+
+
+        <mat-card-content>
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 responsive-table tableOrder">
+                <!-- Order ID Column -->
+                <ng-container matColumnDef="orderId">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Order ID </th>
+                    <td mat-cell *matCellDef="let order"> {{order.orderId}} </td>
+                </ng-container>
+
+                <!-- Customer ID Column -->
+                <ng-container matColumnDef="customerId">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Customer ID </th>
+                    <td mat-cell *matCellDef="let order"> {{order.customerId}} </td>
+                </ng-container>
+
+                <!-- Customer Name Column -->
+                <ng-container matColumnDef="customerName">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Customer Name </th>
+                    <td mat-cell *matCellDef="let order"> {{order.customerName}} </td>
+                </ng-container>
+
+                <!-- Items ID Column -->
+                <ng-container matColumnDef="itemsId">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Item ID </th>
+                    <td mat-cell *matCellDef="let order"> {{order.itemsId}} </td>
+                </ng-container>
+
+                <!-- Items Name Column -->
+                <ng-container matColumnDef="itemName">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Item Name </th>
+                    <td mat-cell *matCellDef="let order"> {{order.itemName}} </td>
+                </ng-container>
+
+                <!-- Order Code Column -->
+                <ng-container matColumnDef="orderCode">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Order Code </th>
+                    <td mat-cell *matCellDef="let order" class="fix-text"> {{order.orderCode}} </td>
+                </ng-container>
+
+                <!-- Quantity Column -->
+                <ng-container matColumnDef="quantity">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
+                    <td mat-cell *matCellDef="let order"> {{order.quantity}} </td>
+                </ng-container>
+
+                <!-- Total Price Column -->
+                <ng-container matColumnDef="totalPrice">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Price </th>
+                    <td mat-cell *matCellDef="let order"> IDR {{order.totalPrice}} </td>
+                </ng-container>
+
+                <!-- Order Date Column -->
+                <ng-container matColumnDef="orderDate">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Order Date </th>
+                    <td mat-cell *matCellDef="let order"> {{ order.orderDateConverted | date: 'shortDate' }} </td>
+                </ng-container>
+
+                <!-- Action Column -->
+                <ng-container matColumnDef="actions" class="actionColumn">
+                    <th mat-header-cell *matHeaderCellDef> Actions </th>
+                    <td mat-cell *matCellDef="let order" class="action-buttons">
+                        <button mat-icon-button (click)="viewOrder(order.orderId)" class="icon-visibility">
+                            <mat-icon>visibility</mat-icon>
+                        </button>
+                        <!-- <button mat-icon-button color="accent" (click)="downloadReportByOrderId(order.orderId)"
+                            class="icon-download">
+                            <mat-icon>download</mat-icon>
+                        </button> -->
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+        </mat-card-content>
+    </mat-card>
+</div>
